Base scrupal-sbt on sbt-project: * Update .idea files for IJ 15 * Remove redundancy with sbt-project * Remove sub-projects and put everything in the top level main project * Create three plugins: One of Scrupal itself, one for scrupal based project, one for scrupal modules * Test each of the three plugins